Add:OGP-settings
OGPの設定を追加

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <meta name="robots" content="noindex" />
 
     <!-- OGP -->
-    <meta property="og:url" content=" ページの URL" />
-    <meta property="og:type" content=" ページの種類" />
-    <meta property="og:title" content=" ページの タイトル" />
-    <meta property="og:description" content=" ページの説明文" />
-    <meta property="og:site_name" content="サイト名" />
+    <meta property="og:url" content=" https://higa-ma.github.io/woodenstudio24/" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content=" WOODEN STUDIO" />
+    <meta property="og:description" content=" 架空のオーダーメイド家具屋 WOODENSTUDIOの公式サイト" />
+    <meta property="og:site_name" content="WOODENSTUDIO" />
     <meta property="og:image" content=" サムネイル画像の URL" />
 
     <!-- X OGP -->
-    <meta name="twitter:card" content="カードの種類" />
-    <meta name="twitter:site" content="@ユーザー名" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@higama482
+    " />
 
     <!-- Reset CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@4.0.1/destyle.min.css">
